# lazytime

./: README.md  go.mod  lazytime  main.go  pyproject.toml
cli/: cli.go
pytimelog/: tui.py
src/pytimelog/: cli.py  ui.py
storage/: storage.go  storage_test.go  time.go  time_test.go
tui/: aggregation.go  model.go  styles.go  tui.go  view.go
tui/components/: charts.go  heatmap.go  hero.go  modal.go  progress.go  tabs.go  tree.go
