[project]
name = "pytimelog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tk>=0.1.0",
]

[project.scripts]
pytimelog = "pytimelog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
